added calcuate input boxes and resized logo

--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
                 </a>
               </nav>
             <section class = "header-title">
-                <h2>So how much can you borrow?</h2>
+                <h2>How much can I borrow?</h2>
             </section>
         </header>
         <section>
-            <p>placeholder for input</p>
+            <h4>Total Gross Income</h4>
+            <input class= "calcinput">
+            <h4>Total Debt / Major Expenses</h4>
+            <input class= "calcinput">
             <button>Calculate</button>
         </section>
     </div>
