--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Header Nav -->
     <div class="content">
         <header>
-            <nav class="navbar sticky-top navbar-light bg-white">
+            <nav class="logo navbar sticky-top navbar-light bg-white">
                 <a class="navbar-brand" href="#">
                   <img src="assets/images/housing_logo.png" width="225" height="100" alt="">
                 </a>
@@ -53,7 +53,7 @@
             </ul>
             <br>
             <br>
-            <p class="copyright">Copyright 2021 / <a href="privacy-policy.html">Terms and Conditions</a></p>
+            <p class="copyright">Copyright 2021 / <a href="terms-conditions.html">Terms and Conditions</a></p>
 
         </footer>
   </body>
