--- a/index.html
+++ b/index.html
@@ -23,29 +23,33 @@
               </a>
             </nav>
           </div>
-            <section class = "header-title">
-                <h2>How much can I borrow?</h2>
-            </section>
         </header>
         <div class="container">
+          <section class = "header-title">
+            <h3>How much can I borrow?</h3>
+          </section>
           <form class="form" id="inputform">
             <section>
-  
-              <h4>Total Gross Income</h4>
-              <input name="num1" type="number" id="num1" class= "num1">
-              <h4>Total Debt / Major Expenses</h4>
-              <input name="num2" type="number" id="num2" class= "num2">
-  
-              <div class="submit">
-                <button id="button">Calculate</button>
+              <div class="form-group">
+                <label>Total Gross Income</label>
+                <input name="num1" type="number" id="num1" class= "form-control input num1" autofocus>
               </div>
+              <div class="form-group">
+                <label>Total Debt / Major Expenses</label>
+                <input name="num2" type="number" id="num2" class= "form-control input num2">
+              </div>
+                <div class="submit">
+                  <button id="button" class="btn btn-primary btn-lg btn-block">Calculate</button>
+                </div>
           </form>
             </section>
         </div>
 
-        <section>
-          <h3 id="results"></h3>
-        </section>
+        <div class="container">
+          <section>
+            <h3 id="results"></h3>
+          </section>
+        </div>
     </div>
     
 
