added additional javascript equations to complete the calculator function to giving user total buying power

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="container">
             <nav class="logo navbar sticky-top navbar-light bg-white justify-content-center">
               <a class="navbar-brand" href="index.html">
-                <img src="assets/images/housing_logo.png" width="225" height="100" alt="">
+                <img src="assets/images/housing_logo.png" width="275" height="125" alt="">
               </a>
             </nav>
           </div>
@@ -48,6 +48,8 @@
         <div class="container">
           <section>
             <h3 id="results"></h3>
+            <h3 id="deposit"></h3>
+            <h3 id="buyingpower"></h3>
           </section>
         </div>
     </div>
