--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </ul>
             <br>
             <br>
-            <p class="copyright">Copyright 2021 <a href="terms-conditions.html">Terms and Conditions</a></p>
+            <p class="copyright">Copyright 2021© // <a href="terms-conditions.html">Terms and Conditions</a></p>
 
         </footer>
   </body>
