--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                 <div class="submit">
                   <button id="button" class="btn btn-primary btn-lg btn-block">Calculate</button>
                 </div>
+                <div class="form-group resetbutton">
+                  <input type="button" class="resetbutton btn btn-default"  onclick="reset()" value="Reset">
+                </div>
+
           </form>
             </section>
         </div>
