--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <section>
               <div class="form-group">
                 <label>Total Gross Income</label>
-                <input name="num1" type="number" id="num1" class= "form-control input num1" autofocus>
+                <input name="num1" id="num1" class= "form-control input num1 number" autofocus>
               </div>
               <div class="form-group">
                 <label>Total Debt / Major Expenses</label>
-                <input name="num2" type="number" id="num2" class= "form-control input num2">
+                <input name="num2" value="0" id="num2" class= "form-control input num2 number">
               </div>
                 <div class="submit">
                   <button id="button" class="btn btn-primary btn-lg btn-block">Calculate</button>
