--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <section>
               <div class="form-group">
                 <label>Total Gross Income</label>
-                <input name="num1" id="num1" class= "form-control input num1 number" autofocus>
+                <input name="num1" id="num1" type="tel" class= "form-control input num1 number" autofocus>
               </div>
               <div class="form-group">
                 <label>Total Debt / Major Expenses</label>
