--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               </div>
               <div class="form-group">
                 <label>Total Debt / Major Expenses</label>
-                <input name="num2" value="0" id="num2" class= "form-control input num2 number">
+                <input name="num2" value="0" id="num2" type="tel" class= "form-control input num2 number">
               </div>
                 <div class="submit">
                   <button id="button" class="btn btn-primary btn-lg btn-block">Calculate</button>
