--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </section>
         </div>
 
-        <div class="container">
+        <div class="container" >
           <section>
             <h3 id="results"></h3>
             <h3 id="deposit"></h3>
@@ -63,7 +63,8 @@
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <script src="calculate.js"></script>
+    <script src="assets/js/calculate.js"></script>
+    <script src="assets/js/reset.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     
 
