when Total Debt input is in focus removes value 0 so user does not have to remove to begin typing. Better UI

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </div>
               <div class="form-group">
                 <label>Total Debt / Major Expenses <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-content="Annual major expenses like school repayments, childcare. Otherwise, leave at 0. ">?</a></label>
-                <input name="num2" value="0" id="num2" type="tel" class= "form-control input num2 number">
+                <input name="num2" value="0" id="num2" type="tel" class= "form-control input num2 number" onfocus="this.value=''">
               </div>
                 <div class="submit">
                   <button id="button" class="btn btn-primary btn-lg btn-block">Calculate</button>
