--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <input name="num2" value="0" id="num2" type="tel" class= "form-control input num2 number" onfocus="this.value=''">
               </div>
                 <div class="submit">
-                  <button id="button" class="btn btn-primary btn-lg btn-block">Calculate</button>
+                  <button id="button" class="btn btn-primary btn-lg btn-block" onclick="getFocus()">Calculate</button>
                 </div>
                 <div class="form-group resetbutton">
                   <input type="button" class="resetbutton btn btn-default"  onclick="resetValue()" value="Reset">
@@ -48,7 +48,7 @@
         </div>
         <div></div>
         <!-- Results Section-->
-        <div class="container">
+        <div class="container" id="resultssection">
           <form id="inputform" class="resultssection">
             <h4 id="results"></h4>
             <h4 id="deposit"></h4>
