--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <h4 id="results"></h4>
             <h4 id="deposit"></h4>
             <h4 id="buyingpower"></h4>
+            <button class="btn btn-primary btn-lg btn-block">Share Results</button>
           </form>
         </div>
     </div>
@@ -82,7 +83,7 @@
             </ul>
             <br>
             <br>
-            <p class="copyright">Copyright 2021© // <a href="terms-conditions.html">Terms and Conditions</a></p>
+            <p class="copyright">Copyright 2021© // <a href="terms-conditions.html">Terms and Conditions</a> // <a href="faq.html">FAQ</a></p>
 
         </footer>
   </body>
