--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
           <form class="form" id="inputform">
             <section>
               <div class="form-group">
-                <label>Total Gross Income <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-content="Combine all your annual income before taxes">?</a></label>
+                <label>Total Gross Income <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-content="Combine all your annual income before taxes"><i class="fas fa-question"></i></a></label>
                 <input name="num1" id="num1" type="tel" class= "form-control input num1 number" autofocus>
               </div>
               <div class="form-group">
-                <label>Total Debt / Major Expenses <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-content="Annual major expenses like school repayments, childcare. Otherwise, leave at 0. ">?</a></label>
+                <label>Total Debt / Major Expenses <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-content="Annual major expenses like school repayments, childcare. Otherwise, leave at 0. "><i class="fas fa-question"></i></a></label>
                 <input name="num2" value="0" id="num2" type="tel" class= "form-control input num2 number" onfocus="this.value=''">
               </div>
                 <div class="submit">
@@ -53,8 +53,37 @@
             <h4 id="results"></h4>
             <h4 id="deposit"></h4>
             <h4 id="buyingpower"></h4>
-            <button id="share" class="share btn btn-primary btn-lg btn-block">Share Results</button>
+            <button id="share" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Share Results <i class="fas fa-share"></i></button>
           </form>
+        </div>
+        <!-- Pop-up Modal To Share Results-->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Share Your Results</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body container">
+                <form class="form">
+                  <div class="form-group">ç
+                    <label>Enter Your Email</label>
+                    <input name="email" type="email" autofocus>
+                  </div>
+                  <div class="form-group sendresultsbutton">
+                    <div class="send">
+                      <button id="button" class="btn btn-primary btn-lg btn-block">Send Results <i class="far fa-envelope"></i></button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
         </div>
     </div>
     
