reset function turned on to reset calculations

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="resetbutton btn btn-secondary" data-dismiss="modal" onclick="resetValue()">Reset</button>
               </div>
             </div>
           </div>
@@ -112,7 +113,8 @@
             </ul>
             <br>
             <br>
-            <p class="copyright">Copyright 2021© // <a href="terms-conditions.html">Terms and Conditions</a> // <a href="faq.html">FAQ</a></p>
+            <p class="copyright"><a href="terms-conditions.html">Terms and Conditions </a> //  <a href="faq.html"> FAQ</a></p>
+
 
         </footer>
   </body>
