testing for  bug with SendMail message not sending on live site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.ico"/>
     <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript"
-    src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+        src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
     <script type="text/javascript">
         (function(){
             emailjs.init("user_oB2LJ5j4wXYQFkUtk6ahR");
@@ -74,20 +74,19 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
-              <div class="modal-body container">
-                  <form id="contact-form">
-                    <input type="hidden" name="contact_number">
-                    <label>Name</label>
-                    <input type="text" name="user_name">
-                    <label>Email</label>
-                    <input type="email" name="user_email">
-                    <textarea name="message">
-                      <h4 id="results"></h4>
-                      <h4 id="deposit"></h4>
-                      <h4 id="buyingpower"></h4>
-                    </textarea>
-                    <input type="submit" value="Send">
-                  </form>
+<section class="container-fluid">
+        <div class="row bg-color-contact">
+            <div class="col">
+                <div class="center-form">
+                    <form onsubmit="return sendMail(this);">
+                        <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
+                        <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
+                        <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
+                        <div class="form-row text-center">
+                            <div class="col">
+                                <button type="submit" class="btn btn-secondary">Send Request</button>
+                            </div>
+                        </div>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
