reststructure javscript innertext to display results in a more visual appealing manner

--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
         <div class="container" id="resultssection">
 
           <form class="resultssection">
+            <h5>You can potentially borrow:</h5>
             <h4 id="results"></h4>
+            <h5>Your 20% deposit needs to be:</h5>
             <h4 id="deposit"></h4>
+            <h5>Your total buying power is: </h5>
             <h4 id="buyingpower"></h4>
             <button id="share" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Share Results <i class="fas fa-share"></i></button>
           </form>
@@ -77,6 +80,7 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
+
         <!-- Send Results Input Form -->
         <section class="container" >
           <div class="bg-color-contact">
