--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
                 <form onsubmit="return sendMail(this);">
                     <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
                     <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
-                    <div class="form-row text-center">
-                            <button id="results_send" type="submit" class="btn btn-secondary">Send Results</button>
-                    </div>
+                    <input type= "hidden" id="person_results" name="results" value="">
+                    <button id="results_send" type="submit" class="btn btn-secondary">Send Results</button>
                 </form>
               </div>
           </div>
