--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
                     <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
                     <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
                     <input type= "hidden" id="person_results" name="results" value="">
+                    <input type= "hidden" id="deposit_needed" name="deposit_needed" value="">
+                    <input type= "hidden" id="buyer_total" name="buyer_total" value="">
                     <button id="results_send" type="submit" class="btn btn-secondary">Send Results</button>
                 </form>
               </div>
@@ -107,7 +109,7 @@
     
 
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <!-- Javascript jQuery and Bootstrap Imports -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="assets/js/calculate.js"></script>
