fix for UI bug when user hits reset in Send Results form it will reset the message sent confirmation.

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
           <form class="resultssection">
             <h5>You can potentially borrow:</h5>
             <h4 id="results"></h4>
-            <h5>Your 20% deposit needs to be:</h5>
+            <h5>20% deposit needs to be:</h5>
             <h4 id="deposit"></h4>
-            <h5>Your total buying power is: </h5>
+            <h5>Total buying power is: </h5>
             <h4 id="buyingpower"></h4>
             <button id="share" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Share Results <i class="fas fa-share"></i></button>
           </form>
