--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="container">
             <nav class="logo navbar sticky-top navbar-light bg-white justify-content-center">
               <a class="navbar-brand" href="index.html">
-                <img src="assets/images/housing_logo.png" width="275" height="125" alt="">
+                <img src="assets/images/housing_logo.png" width="275" height="125" alt="logo for house wars">
               </a>
             </nav>
           </div>
@@ -40,7 +40,7 @@
                 <input name="num1" id="num1" type="tel" class= "form-control input num1 number" autofocus>
               </div>
               <div class="form-group">
-                <label>Total Debt / Major Expenses <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-content="Annual major expenses like school repayments, childcare. Otherwise, leave at 0. "><i class="fas fa-question"></i></a></label>
+                <label>Total Debt <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-content="Annual major expenses like school repayments, childcare. Otherwise, leave at 0. "><i class="fas fa-question"></i></a></label>
                 <input name="num2" value="0" id="num2" type="tel" class= "form-control input num2 number" onfocus="this.value=''">
               </div>
                 <div class="submit">
@@ -59,13 +59,13 @@
         <div class="container" id="resultssection">
 
           <form class="resultssection">
-            <h5>You can potentially borrow:</h5>
+            <h5>Potentially can borrow:</h5>
             <h4 id="results"></h4>
-            <h5>20% deposit needs to be:</h5>
+            <h5>20% deposit:</h5>
             <h4 id="deposit"></h4>
-            <h5>Total buying power is: </h5>
+            <h5>Total buying power: </h5>
             <h4 id="buyingpower"></h4>
-            <button id="share" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Share Results <i class="fas fa-share"></i></button>
+            <button id="share" type="button" class="btn btn-primary btn-block btn-lg" data-toggle="modal" data-target="#exampleModal">Share Results <i class="fas fa-share"></i></button>
           </form>
 
         </div>
@@ -86,17 +86,20 @@
           <div class="bg-color-contact">
             <div id="resultsform">
                 <form onsubmit="return sendMail(this);">
-                    <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
-                    <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
+                    <input type="text" name="name" class="form-control send-results-input" id="fullname" placeholder="Name" required/>
+                    <input type="text" name="emailaddress" class="form-control send-results-input" id="emailaddress" placeholder="Email" required/>
+                    <br>
                     <input type= "hidden" id="person_results" name="results" value="">
                     <input type= "hidden" id="deposit_needed" name="deposit_needed" value="">
                     <input type= "hidden" id="buyer_total" name="buyer_total" value="">
-                    <button id="results_send" type="submit" class="btn btn-secondary">Send Results</button>
+                    <button id="results-send" type="submit" class="btn btn-primary btn-block btn-lg">Send Results</button>
                 </form>
+                <br>
               </div>
           </div>
         </section>
             <div class="modal-footer">
+              <br>
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               <button type="button" class="resetbuttonmodal btn btn-secondary" data-dismiss="modal" onclick="resetValue()">Reset</button>
             </div>
