added FAQ button below calculator

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div class="content">
         <header>
           <div class="container">
-            <nav class="logo navbar sticky-top navbar-light bg-white justify-content-center">
+            <nav class="logo navbar navbar-expand-lg sticky-top navbar-light bg-white justify-content-center" style="padding-bottom: 0px;">
               <a class="navbar-brand" href="index.html">
-                <img src="assets/images/housing_logo.png" width="275" height="125" alt="logo for house wars">
+                <img src="assets/images/housing_logo.png" width="275" height="125" alt="logo for house wars" style="padding-left: 10px;">
               </a>
             </nav>
           </div>
@@ -49,11 +49,10 @@
                 <div class="form-group resetbutton">
                   <input type="button" class="resetbutton btn btn-default"  onclick="resetValue()" value="Reset">
                 </div>
-            </section>
-                
+            </section> 
           </form>
-
         </div>
+
 
         <!-- Results Section-->
         <div class="container" id="resultssection">
@@ -69,6 +68,14 @@
           </form>
 
         </div>
+
+        <!-- FAQ SECTION-->
+          <div class="container">
+            <div class="faq">
+              <button type="button" class="btn btn-block btn-lg"><a href="faq.html">Most Frequently Asked Questions <i class="fas fa-home"></i></a></button>
+            </div>
+        
+          </div>
 
         <!-- Pop-up Modal To Share Results-->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-hidden="true">
