created hover feature over FAQ homepage button along with some code cleanup

--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
                 <img src="assets/images/broken_house_404.png" width="275" height="275" alt="broken house clipart">
               </a>
             </div>
-            <div class="p-2 d-flex justify-content-center"><a href="index.html">Return home.</a></div>
+            <div class="p-2 d-flex justify-content-center"><a href="index.html">Return to unbroken home.</a></div>
           </div>
 
 
@@ -43,7 +43,7 @@
     
 
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <!-- Javascript jQuery and Bootstrap Imports -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="assets/js/calculate.js"></script>
