--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
         <!-- FAQ SECTION-->
           <div class="container">
-            <div class="faq">
-              <button type="button" class="btn btn-block btn-lg"><a href="faq.html">Most Frequently Asked Questions <i class="fas fa-home"></i></a></button>
+            <div class="faq" id="faqhover">
+              <button type="button" class="btn btn-block btn-lg" onmouseover="hoverFaq()" onmouseout="hoverFaqOut()"><a href="faq.html">Most Frequently Asked Questions <i class="fas fa-home"></i></a></button>
             </div>
         
           </div>
