--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Free Mortgage Calculator to Tackle the Irish Market">
+    <meta name="author" content="House Wars">
+    <meta name="keywords" content="Ireland Housing, Mortgage Approval, How Much Can I Borrow"
 
     <!-- Bootstrap and CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -18,6 +21,7 @@
     </script>
     <title>House Wars</title>
   </head>
+  
   <body>
     <!-- Header Nav -->
     <div class="content">
@@ -25,33 +29,38 @@
           <div class="container">
             <nav class="logo navbar navbar-expand-lg sticky-top navbar-light bg-white justify-content-center" style="padding-bottom: 0px;">
               <a class="navbar-brand" href="index.html">
-                <img src="assets/images/housing_logo.png" width="275" height="125" alt="logo for house wars" style="padding-left: 10px;">
+                <img src="assets/images/housing_logo.png" alt="logo for house wars" style="padding-left: 10px;">
               </a>
             </nav>
           </div>
         </header>
-        <!-- Mortgage Calculator Form / Input Section-->
-        <div class="container">
-          <form class="form" id="inputform">
 
-            <section>
-              <div class="form-group">
-                <label>Total Gross Income <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-content="Combine all your annual income before taxes"><i class="fas fa-question"></i></a></label>
-                <input name="num1" id="num1" type="tel" class= "form-control input num1 number" autofocus>
-              </div>
-              <div class="form-group">
-                <label>Total Debt <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-content="Annual major expenses like school repayments, childcare. Otherwise, leave at 0. "><i class="fas fa-question"></i></a></label>
-                <input name="num2" value="0" id="num2" type="tel" class= "form-control input num2 number" onfocus="this.value=''">
-              </div>
-                <div class="submit">
-                  <button id="button" class="btn btn-primary btn-lg btn-block" onclick="setTimeout(getFocus,100);">Calculate</button>
+        <!-- Mortgage Calculator Form / Input Section-->
+        <main>
+          <div class="container">
+            <form class="form" id="inputform">
+  
+              <section>
+                <div class="form-group">
+                  <label>Total Gross Income <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-content="Combine all your annual income before taxes"><i class="fas fa-question"></i></a></label>
+                  <input name="num1" id="num1" type="tel" class= "form-control input num1 number" aria-label="total gross income" autofocus>
                 </div>
-                <div class="form-group resetbutton">
-                  <input type="button" class="resetbutton btn btn-default"  onclick="resetValue()" value="Reset">
+                <div class="form-group">
+                  <label>Total Debt <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-content="Annual major expenses like school repayments, childcare. Otherwise, leave at 0. "><i class="fas fa-question"></i></a></label>
+                  <input name="num2" value="0" id="num2" type="tel" class= "form-control input num2 number" aria-label="total debt" onfocus="this.value=''">
                 </div>
-            </section> 
-          </form>
-        </div>
+                  <div class="submit">
+                    <button id="button" class="btn btn-primary btn-lg btn-block" onclick="setTimeout(getFocus,100);">Calculate <i class="fas fa-calculator"></i></button>
+                  </div>
+                  <div class="form-group resetbutton">
+                    <input type="button" class="resetbutton btn btn-default"  onclick="resetValue()" value="Reset">
+                  </div>
+              </section> 
+            </form>
+          </div>
+
+        </main>
+
 
 
         <!-- Results Section-->
@@ -72,7 +81,7 @@
         <!-- FAQ SECTION-->
           <div class="container">
             <div class="faq" id="faqhover">
-              <button type="button" class="btn btn-block btn-lg" onmouseover="hoverFaq()" onmouseout="hoverFaqOut()"><a href="faq.html">Most Frequently Asked Questions <i class="fas fa-home"></i></a></button>
+              <button type="button" class="btn btn-block btn-lg" onclick="hoverFaq()" onmouseover="hoverFaq()" onmouseout="hoverFaqOut()"><a href="faq.html">Most Frequently Asked Questions <i class="fas fa-home"></i></a></button>
             </div>
         
           </div>
@@ -93,8 +102,8 @@
           <div class="bg-color-contact">
             <div id="resultsform">
                 <form onsubmit="return sendMail(this);">
-                    <input type="text" name="name" class="form-control send-results-input" id="fullname" placeholder="Name" required/>
-                    <input type="text" name="emailaddress" class="form-control send-results-input" id="emailaddress" placeholder="Email" required/>
+                    <input type="text" name="name" class="form-control send-results-input" id="fullname" placeholder="Name who you are sending it too" aria-label="enter your name" required/>
+                    <input type="text" name="emailaddress" class="form-control send-results-input" id="emailaddress" placeholder="Email" aria-label="enter your email" required/>
                     <br>
                     <input type= "hidden" id="person_results" name="results" value="">
                     <input type= "hidden" id="deposit_needed" name="deposit_needed" value="">
