--- a/404.html
+++ b/404.html
@@ -15,15 +15,15 @@
   <body>
     <!-- Header Nav -->
     <div class="content">
-        <header>
-          <div class="container">
-            <nav class="logo navbar sticky-top navbar-light bg-white justify-content-center">
-              <a class="navbar-brand" href="index.html">
-                <img src="assets/images/housing_logo.png" width="275" height="125" alt="">
-              </a>
-            </nav>
-          </div>
-        </header>
+      <header>
+        <div class="container">
+          <nav class="logo navbar navbar-expand-lg sticky-top navbar-light bg-white justify-content-center" style="padding-bottom: 0px;">
+            <a class="navbar-brand" href="index.html">
+              <img src="assets/images/housing_logo.png" alt="logo for house wars" style="padding-left: 10px;">
+            </a>
+          </nav>
+        </div>
+      </header>
         <div class="container-fluid">
           <div class="d-flex flex-column">
             <div class="p-2 d-flex justify-content-center"><h2 class='privacy-title'>OH CRAP..... Something broke in the house</h2></div>
@@ -59,7 +59,7 @@
             </ul>
             <br>
             <br>
-            <p class="copyright">Copyright 2021© // <a href="terms-conditions.html">Terms and Conditions</a> // <a href="faq.html">FAQ</a></p>
+            <p class="copyright"><a href="terms-conditions.html">Terms and Conditions</a> // <a href="faq.html">FAQ</a></p>
 
         </footer>
   </body>
