--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
     <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.ico"/>
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script> -->
     <script>
         (function(){
             emailjs.init("user_oB2LJ5j4wXYQFkUtk6ahR");
@@ -81,7 +82,7 @@
         <!-- FAQ SECTION-->
           <div class="container">
             <div class="faq" id="faqhover">
-              <button type="button" class="btn btn-block btn-lg" onclick="hoverFaq()" onmouseover="hoverFaq()" onmouseout="hoverFaqOut()"><a href="faq.html">Most Frequently Asked Questions <i class="fas fa-home"></i></a></button>
+              <button class="btn btn-block btn-lg" onclick="hoverFaq()" onmouseover="hoverFaq()" onmouseout="hoverFaqOut()"><a href="faq.html">Most Frequently Asked Questions <i class="fas fa-home"></i></a></button>
             </div>
         
           </div>
