removed javascript imports from html files that were not in use to fix error that was occuring

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="bg-color-contact">
             <div id="resultsform">
                 <form onsubmit="return sendMail(this);">
-                    <input type="text" name="name" class="form-control send-results-input" id="fullname" placeholder="Name who you are sending it too" aria-label="enter your name" required/>
+                    <input type="text" name="name" class="form-control send-results-input" id="fullname" placeholder="Name who you are sending it too" aria-label="enter your name" autofocus required/>
                     <input type="text" name="emailaddress" class="form-control send-results-input" id="emailaddress" placeholder="Email" aria-label="enter your email" required/>
                     <br>
                     <input type= "hidden" id="person_results" name="results" value="">
