--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -27,7 +27,7 @@
         <div class="container">
           <section >
             <h2 class='privacy-title'>Terms and Conditions</h2>
-            <p>This is the application of House Wars (HW).</p>
+            <p>This is the application of House Wars (HW). This application is used for educational purposes only.</p>
     
             <h4>Contact</h4>
             <p>House Wars can me reach via email at info[at]houseewars.com</p>
@@ -82,9 +82,6 @@
     <!-- Javascript jQuery and Bootstrap Imports -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <script src="assets/js/calculate.js"></script>
-    <script src="assets/js/reset.js"></script>
-    <script src="assets/js/popover.js"></script>
     
     <!-- Footer -->
         <footer>
