--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
 
         <!-- FAQ SECTION-->
-          <div class="container">
+          <div class="container" onclick="location.href='faq.html';">
             <div class="faq" id="faqhover">
               <button class="btn btn-block btn-lg" onclick="hoverFaq()" onmouseover="hoverFaq()" onmouseout="hoverFaqOut()"><a href="faq.html">Most Frequently Asked Questions <i class="fas fa-home"></i></a></button>
             </div>
