--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Free Mortgage Calculator to Tackle the Irish Market">
     <meta name="author" content="House Wars">
-    <meta name="keywords" content="Ireland Housing, Mortgage Approval, How Much Can I Borrow"
+    <meta name="keywords" content="Ireland Housing, Mortgage Approval, How Much Can I Borrow">
 
     <!-- Bootstrap and CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
     <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.ico"/>
     <link rel="stylesheet" href="assets/css/style.css">
-    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
+    <script src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script> -->
     <script>
         (function(){
@@ -82,7 +82,7 @@
         <!-- FAQ SECTION-->
           <div class="container" onclick="location.href='faq.html';">
             <div class="faq" id="faqhover">
-              <button class="btn btn-block btn-lg" onclick="hoverFaq()" onmouseover="hoverFaq()" onmouseout="hoverFaqOut()"><a href="faq.html">Most Frequently Asked Questions <i class="fas fa-home"></i></a></button>
+              <button type="button" class="btn btn-block btn-lg" onclick="hoverFaq()" onmouseover="hoverFaq()" onmouseout="hoverFaqOut()">Most Frequently Asked Questions <i class="fas fa-home"></i></button>
             </div>
         
           </div>
@@ -103,7 +103,7 @@
           <div class="bg-color-contact">
             <div id="resultsform">
                 <form onsubmit="return sendMail(this);">
-                    <input type="text" name="name" class="form-control send-results-input" id="fullname" placeholder="Name who you are sending it too" aria-label="enter your name" autofocus required/>
+                    <input type="text" name="name" class="form-control send-results-input" id="fullname" placeholder="Name" aria-label="enter your name" required/>
                     <input type="text" name="emailaddress" class="form-control send-results-input" id="emailaddress" placeholder="Email" aria-label="enter your email" required/>
                     <br>
                     <input type= "hidden" id="person_results" name="results" value="">
