changed FAQ headers to fit with colour scheme

--- a/faq.html
+++ b/faq.html
@@ -31,7 +31,7 @@
             <div class="card">
               <div class="card-header" id="headingOne">
                 <h2 class="mb-0">
-                  <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <button class=" btn-light btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     <h5>What is the difference between gross and take home</h5>
                   </button>
                 </h2>
