adding to README documentation about design features

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- FAQ SECTION-->
           <div class="container" onclick="location.href='faq.html';">
             <div class="faq" id="faqhover">
-              <button type="button" class="btn btn-block btn-lg" onclick="hoverFaq()" onmouseover="hoverFaq()" onmouseout="hoverFaqOut()">Most Frequently Asked Questions <i class="fas fa-home"></i></button>
+              <button type="button" class="btn btn-block btn-lg" onclick="hoverFaq()" onmouseover="hoverFaq()" onmouseout="hoverFaqOut()">Most Frequently Asked Questions <i class="far fa-question-circle"></i></button>
             </div>
         
           </div>
