corrected URL for return home link

--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
       <header>
         <div class="container">
           <nav class="logo navbar navbar-expand-lg sticky-top navbar-light bg-white justify-content-center" style="padding-bottom: 0px;">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="https://maelou363.github.io/house_wars/index.html">
               <img src="https://maelou363.github.io/house_wars/assets/images/housing_logo.png" alt="logo for house wars" style="padding-left: 10px;">
             </a>
           </nav>
@@ -29,11 +29,11 @@
           <div class="d-flex flex-column">
             <div class="p-2 d-flex justify-content-center"><h2 class='privacy-title'>OH CRAP..... Something broke in the house</h2></div>
             <div class="p-2 d-flex justify-content-center">
-              <a href="index.html">
+              <a href="https://maelou363.github.io/house_wars/index.html">
                 <img src="https://maelou363.github.io/house_wars/assets/images/broken_house_404.png" width="275" height="275" alt="broken house clipart">
               </a>
             </div>
-            <div class="p-2 d-flex justify-content-center"><a href="index.html">Return to unbroken home.</a></div>
+            <div class="p-2 d-flex justify-content-center"><a href="https://maelou363.github.io/house_wars/index.html">Return to unbroken home.</a></div>
           </div>
         </div>
   </div>
