initiated questionpopover to be hoverable on desktop and clickable on mobile

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
   
               <section>
                 <div class="form-group">
-                  <label>Total Gross Income <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-content="Combine all your annual income before taxes"><i class="fas fa-question"></i></a></label>
+                  <label>Total Gross Income <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Combine all your annual income before taxes"><i class="fas fa-question"></i></a></label>
                   <input name="num1" id="num1" type="tel" class= "form-control input num1 number" aria-label="total gross income" autofocus>
                 </div>
                 <div class="form-group">
-                  <label>Total Debt <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-content="Annual major expenses like school repayments, childcare. Otherwise, leave at 0. "><i class="fas fa-question"></i></a></label>
+                  <label>Total Debt <a href="#" class="questionpopover" data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Annual major expenses like school repayments, childcare. Otherwise, leave at 0. "><i class="fas fa-question"></i></a></label>
                   <input name="num2" value="0" id="num2" type="tel" class= "form-control input num2 number" aria-label="total debt" onfocus="this.value=''">
                 </div>
                   <div class="submit">
