--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -24,6 +24,7 @@
           </nav>
         </div>
       </header>
+      <!-- Terms and Conditions Content -->
         <div class="container">
           <section >
             <h2 class='privacy-title'>Terms and Conditions</h2>
